<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assistmetic</string>
    <string name="action_settings">Settings</string>
    <string name="operand1">op1</string>
    <string name="operator">~</string>
    <string name="operand2">op2</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="pref_sound">Sound preference</string>
    <string name="pref_sound_summary">Enables sound upon answer submission</string>

</resources>
