<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/trueAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".34"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".4" />

        <TextView
            android:id="@+id/operand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:gravity="left|center_vertical"
            android:textSize="40.0sp"
            android:text="@string/operand1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:gravity="center|center_horizontal"
            android:textSize="35.0sp"
            android:text="@string/operator"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/operand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:gravity="right|center_horizontal"
            android:textSize="40.0sp"
            android:text="@string/operand2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:textSize="25.0sp"
            android:onClick="buttonClicked"
            android:text="@string/button_one" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:textSize="25.0sp"
            android:onClick="buttonClicked"
            android:text="@string/button_two" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:textSize="25.0sp"
            android:onClick="buttonClicked"
            android:text="@string/button_three" />

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:textSize="25.0sp"
            android:onClick="buttonClicked"
            android:text="@string/button_four" />

    </LinearLayout>

</TableLayout>